# physics-engine

./: .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  ROADMAP.md  barnes_hut.py  barnes_hut_benchmark.py  barnes_hut_plot.py  barnes_hut_theta_plot.py  barnes_hut_theta_sweep.py  barnes_hut_visualizer.py  energy_analysis.py  spring_visualize.py  visualize.py  visualize_realtime.py
docs/: barnes_hut_latest.json  barnes_hut_latest.txt  barnes_hut_notes.md  barnes_hut_theta_sweep.json  barnes_hut_theta_sweep.txt
src/: benchmark.cpp  main.cpp  spring_benchmark.cpp
src/collision/: CollisionDetector.cpp  CollisionDetector.h
src/dynamics/: Integrator.cpp  Integrator.h
